# backend/image_codex/models/geo.py
@@ -1,0 +1,8 @@
+from pydantic import BaseModel
+
+
+class GeoImage(BaseModel):
+    id: str
+    url: str
+    latitude: float
+    longitude: float
